--- a/friday-challenge.yaml
+++ b/friday-challenge.yaml
@@ -10,6 +10,8 @@ kind: Namespace
 metadata:
   labels:
     kubernetes.io/metadata.name: node-prod
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce-version: v1.28
   name: node-prod
 ---
 apiVersion: apps/v1
@@ -31,8 +33,8 @@ spec:
         app: java-service
     spec:
       containers:
-        - image: lpokrzyw/friday-java-service:v1
-          imagePullPolicy: IfNotPresent
+        - image: lpokrzyw/friday-java-service:v2
+          imagePullPolicy: Always
           name: friday-java-service
           ports:
             - containerPort: 8888
@@ -72,13 +74,25 @@ spec:
       labels:
         app: node-service
     spec:
+      securityContext:
+        runAsUser: 1001
+        runAsGroup: 1001
+        fsGroup: 1001
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - image: lpokrzyw/friday-node-service:v1
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: friday-node-service
           ports:
             - containerPort: 8889
               protocol: TCP
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - "ALL"
 ---
 apiVersion: v1
 kind: Service
