--- a/friday-challenge.yaml
+++ b/friday-challenge.yaml
@@ -49,12 +49,12 @@ metadata:
   namespace: java-prod
 spec:
   ports:
-    - port: 80
+    - port: 8091
       protocol: TCP
       targetPort: 8888
   selector:
     app: java-service
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
